@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.7
 Date: ????
+  Changes:
+    - Tweaks to some preset addons.
 
   Bugfixes:
     - Fix crash when the GUI was cleared by another mod or command (again!).
